Sythax error fixed

--- a/pages/website.html
+++ b/pages/website.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="../css/styles.css">
 </head>
 <body>
     <footer>
@@ -17,15 +17,16 @@
 <h1>My First Website On Mac</h1>
 <h2>Resources I Used To Learn WebDesign</h2>
 <p>
-   <ul></ul>
-    <a href="xbox.com">Games</p>a>
-
+   <ul>
+        <a href="xbox.com">Games</p>
+    </ul>
 </p>
 <br>
 <p>
-<ul>
-    <li>W3Schools</li>
-    <li>Web Design Module</li>
+    <ul>
+        <a href="http://www.Web3school.com">Web3school</a>
+        <li>Web Design Module</li>
+    </ul>
 </p>
 
 </body>
