--- a/pages/website.html
+++ b/pages/website.html
@@ -14,7 +14,9 @@
             <div class="wave" id="wave3"></div>
             <div class="wave" id="wave4"></div>
         <p>My First Website on Mac</p>
-<h1>My First Website On Mac</h1>
+        </div>
+    </footer>
+<h1 style="text-align: center;">My First Website On Mac</h1>
 <h2>Resources I Used To Learn WebDesign</h2>
 <p>
    <ul>
